@startuml edge_package
title COO Project - edge package

package edge {
    class Edge {
        # List<Zone> zones
        
        + Edge(Zone firstZone, List<Zone> zones)
        + Edge(Zone firstZone, Zone... zones)
        + Edge(Topology firstTopology, Topology... topologies)
        + List<Zone> getZones()
        + List<Topology> getZoneTopologies()
        + Zone getZoneAt(int i)
        + int getSize()
        + boolean isCompatibleWith(Edge otherEdge)
        + String toString()
    }
    
    class Zone {
        - Topology topology
        - Set<Zone> connectingZones
        
        + Zone(Topology topology)
        + Topology getTopology()
        + Set<Zone> getConnectingZones()
        + void connectTo(Zone zone) throws WrongTopologyException
        + boolean isConnectedTo(Zone zone)
        + boolean isFinished()
        + String toString()
    }
    
    enum Topology {
        FIELD
        CITY
        ROAD
    }
    
    exception WrongTopologyException {
        + WrongTopologyException(String message)
    }
    
    Edge "1" *-- "1..*" Zone : contains
    Zone "0..*" o-- "0..*" Zone : connectingZones
    Zone --> Topology : has
    Zone ..> WrongTopologyException : throws
}

@enduml
